# teamnot

./: .env.example  .gitignore  AGENT_MEMORY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREWAI_PLAN.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  PROJECT_CONTEXT.md  README.md  STATUS_SNAPSHOT.md  TASK_BOARD.md  claude_worker.py  cli.py  cost_tracker.py  install.ps1  install.sh  pyproject.toml  session_manager.py  task_queue.py  teamnot.py
.claude/agents/: architect.md  implementer.md  reviewer.md
.teamnot/: brief.customer-loop-productization-20260520.yaml  brief.customer-researcher-utmost-20260522.yaml  conventions.md  memory.md
PROJECT_DOCS/: AI_REQUESTS.md  API_CONTRACTS.md  FE_REQUESTS.md
SPRINTS/: SPRINT_CURRENT.md
docs/: customer-loop.md
skills/architect/: SKILL.md
skills/coordinator/: SKILL.md
skills/documenter/: SKILL.md
skills/implementer/: SKILL.md
skills/researcher/: SKILL.md
skills/reviewer/: SKILL.md
skills/tester/: SKILL.md
src/teamnot/: __init__.py  brief.py  dod.py  safety.py  workspace.py
src/teamnot/agents/: __init__.py  bus.py  spec.py
src/teamnot/cli/: __init__.py  __main__.py
src/teamnot/customer_loop/: __init__.py  artifacts.py  brief_generation.py  flow_planning.py  io.py  models.py  orchestrator.py  research_planning.py  runners.py  vision.py  winbrowser_session.mjs
src/teamnot/delivery/: __init__.py  git_branch.py  handover.py
src/teamnot/engine/: __init__.py  pipeline.py  planner.py  worker.py
src/teamnot/gateways/: __init__.py  telegram.py
src/teamnot/memory/: __init__.py  knowledge_review.py
src/teamnot/workers/: __init__.py  claude_cli.py  codex_cli.py  minimax.py
templates/: brief.yaml  customer_flow.yaml  customer_loop.yaml  customer_profile.yaml  customer_test_plan.yaml
tests/: test_brief.py  test_bus.py  test_customer_loop.py  test_customer_loop_cli.py  test_customer_loop_flow_planning.py  test_customer_loop_models.py  test_customer_loop_orchestrator.py  test_customer_loop_runners.py  test_customer_loop_vision.py  test_delivery.py  test_dod.py  test_knowledge_review.py  test_pipeline.py  test_safety.py  test_skills.py  test_workspace.py
