[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "teamnot"
version = "2.0.0a1"
description = "Team No Time — Autonomous AI development workforce. Hand over a project brief, get a finished deliverable."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Trần Văn Lực (Jenky Trần)", email = "tranvanluc.work@gmail.com" },
]
maintainers = [
    { name = "Trần Văn Lực (Jenky Trần)", email = "tranvanluc.work@gmail.com" },
]
keywords = ["ai", "agents", "autonomous", "crewai", "claude", "minimax", "multi-agent", "devops", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "litellm>=1.40",
    "crewai>=0.55",
]

[project.optional-dependencies]
telegram = ["aiogram>=3.4"]
http = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.9"]
all = ["aiogram>=3.4", "fastapi>=0.110", "uvicorn>=0.27"]

[project.scripts]
teamnot = "teamnot.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/jenkytran/teamnot"
Repository = "https://github.com/jenkytran/teamnot"
Issues = "https://github.com/jenkytran/teamnot/issues"
Changelog = "https://github.com/jenkytran/teamnot/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/teamnot"]

[tool.hatch.build.targets.wheel.shared-data]
"templates" = "share/teamnot/templates"
"skills" = "share/teamnot/skills"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = [
    "E501",   # line length — defer to formatter
    "UP042",  # StrEnum would change __str__ semantics; keep (str, Enum) for stable API
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
